--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ ul {
   flex-direction: column;
   align-items: center;
   height: calc(100dvh - 4rem);
-  background-color: var(--tertiary);
+  background-color: var(--primary);
 }
 
 .about__header {
@@ -302,20 +302,34 @@ ul {
 }
 
 .recipe__card {
+  position: relative;
   display: flex;
   flex-direction: column;
   background-color: var(--primary);
-  border-radius: 7px;
-  height: 410px;
+  height: 440px;
+  max-width: 380px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
 }
+
+.recipe__card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+}
+
 .recipe__card-image {
-  border-radius: 7px 7px 0 0;
+  border-radius: 10px 10px 0 0;
   object-fit: contain;
 }
 
 .recipe__card-item {
   padding: 2rem;
 }
+
 .recipe__card-title {
   color: var(--secondary);
   font-size: 1.3rem;
@@ -327,6 +341,9 @@ ul {
   color: var(--dark_grey);
 }
 .recipe__card-button {
+  position: absolute;
+  left: 2rem;
+  bottom: 2rem;
   cursor: pointer;
   background-color: var(--secondary);
   color: var(--primary);
@@ -339,11 +356,11 @@ ul {
     transform 0.3s ease,
     box-shadow 0.3s ease;
   max-width: fit-content;
-  /* display: inline-block; */
+  display: inline-block;
 }
 
 .recipe__card-button:hover {
-  transform: translateY(-3px);
+  transform: translateY(3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -352,9 +369,62 @@ ul {
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    padding-bottom: 3rem;
   }
 
   .recipe__card {
     height: 440px;
   }
 }
+
+/* =============== Footer section =============== */
+
+.main-font {
+  font-family: var(--main-font);
+  color: var(--secondary);
+  font-size: 1.5rem;
+}
+
+.footer {
+  background-color: var(--soft_beige);
+  color: var(--dark_grey);
+  padding: 2rem;
+  text-align: center;
+}
+
+.footer__container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.footer__text {
+  font-size: 1.2rem;
+  opacity: 0.8;
+}
+
+/* .footer__social {
+  display: flex;
+  gap: 1.7rem;
+}
+
+.footer__social-link {
+  display: flex;
+  align-items: last baseline;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--ocre-arenoso);
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+
+.footer__social-link:hover {
+  background-color: var(--beige-crema);
+} */
