--- a/styles.css
+++ b/styles.css
@@ -98,16 +98,19 @@ ul {
 }
 
 .header__nav-link {
+  padding: 0.7rem 1.5rem;
   color: var(--secondary);
   font-family: var(--secondary-font);
-  transition: color 0.3s ease;
+  font-weight: 600;
+  transition: color 0.2s ease;
 }
 
-.header__nav-link--active {
+.header__nav-link:hover {
   color: var(--primary);
   background-color: var(--secondary);
   border-radius: 5px;
-  padding: 16px;
+  padding: 0.7rem 1.5rem;
+  opacity: 0.75;
 }
 
 /* =============== Hero section =============== */
@@ -148,11 +151,16 @@ ul {
     transform 0.3s ease,
     box-shadow 0.3s ease;
   max-width: fit-content;
+  opacity: 0.75;
 }
 
 .hero__button:hover {
   transform: translateY(-3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  background-color: var(--soft_beige);
+  color: var(--secondary);
+  border: 1.5px solid;
+  border-color: var(--secondary);
 }
 
 .hero__description {
@@ -347,7 +355,7 @@ ul {
   bottom: 2rem;
   cursor: pointer;
   background-color: var(--secondary);
-  color: var(--primary);
+  color: var(--soft_beige);
   font-size: 0.9rem;
   font-weight: 700;
   padding: 0.8rem;
@@ -358,14 +366,23 @@ ul {
     box-shadow 0.3s ease;
   max-width: fit-content;
   display: inline-block;
+  opacity: 0.75;
 }
 
 .recipe__card-button:hover {
   transform: translateY(3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  color: var(--primary);
 }
 
-@media (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 980px) {
+  .recipes__body {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 479px) {
   .recipes__body {
     display: flex;
     flex-direction: column;
@@ -449,6 +466,7 @@ ul {
   font-size: 0.9rem;
   font-weight: 700;
   padding: 0.8rem;
+  margin-top: 1.3rem;
   border-radius: 5px;
   cursor: pointer;
   border: none;
@@ -457,14 +475,22 @@ ul {
     box-shadow 0.3s ease;
   max-width: fit-content;
   display: inline-block;
+  opacity: 0.75;
 }
 
 .button--submit:hover {
   transform: translateY(-3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  background-color: var(--soft_beige);
+  color: var(--secondary);
+  border: 1.5px solid;
+  border-color: var(--secondary);
 }
 
 .contact__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 3rem;
 }
 
