--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,16 @@ ul {
   letter-spacing: -5px;
   font-weight: 500;
   font-size: 1.7rem;
+  cursor: pointer;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
+  max-width: fit-content;
+}
+
+.header__menu-button:hover {
+  transform: translateY(1px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 768px) {
@@ -111,6 +121,48 @@ ul {
   border-radius: 5px;
   padding: 0.7rem 1.5rem;
   opacity: 0.75;
+}
+
+/* =============== Toogle menu =============== */
+
+.floating-element {
+  position: fixed;
+  top: 4rem;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: var(--tertiary);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  display: none;
+}
+
+.floating-element.show {
+  display: block;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+}
+
+.overlay.show {
+  display: block;
+}
+
+.header__nav--float {
+}
+.header__nav-list--float {
+}
+.header__nav-item--float {
+}
+.header__nav-link--float {
 }
 
 /* =============== Hero section =============== */
