--- a/styles.css
+++ b/styles.css
@@ -131,8 +131,6 @@ ul {
   left: 0;
   right: 0;
   width: 100%;
-  background-color: var(--tertiary);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   display: none;
 }
@@ -157,12 +155,36 @@ ul {
 }
 
 .header__nav--float {
+  box-sizing: content-box;
+  background-color: var(--soft_beige);
+  border: 0.7px solid var(--secondary);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  opacity: 0.9;
+  border-left: none;
 }
 .header__nav-list--float {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1.7rem 2.2rem;
 }
 .header__nav-item--float {
+  flex: 1;
+  text-align: center;
 }
 .header__nav-link--float {
+  display: block;
+  padding: 1rem;
+  color: var(--secondary);
+  font-family: var(--secondary-font);
+  font-weight: 600;
+  transition: color 0.2s ease;
+}
+.header__nav-link--float:hover {
+  color: var(--primary);
+  background-color: var(--secondary);
+  border-radius: 5px;
+  opacity: 0.75;
 }
 
 /* =============== Hero section =============== */
@@ -584,23 +606,3 @@ ul {
   font-size: 1.2rem;
   opacity: 0.8;
 }
-
-/* .footer__social {
-  display: flex;
-  gap: 1.7rem;
-}
-
-.footer__social-link {
-  display: flex;
-  align-items: last baseline;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: var(--ocre-arenoso);
-  border-radius: 50%;
-  transition: background-color 0.3s ease;
-}
-
-.footer__social-link:hover {
-  background-color: var(--beige-crema);
-} */
